# robot-vacuum-cleaner

./: .editorconfig  .gitattributes  .gitlab-ci.yml  .guix-channel  .pre-commit-config.yaml  .tool-versions  0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  LICENSE.txt  MAINTAINERS.md  META.scm  PLAYBOOK.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  RSR-COMPLIANCE.md  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TESTING-REPORT.adoc  TESTING-REPORT.scm  TOPOLOGY.md  codemeta.json  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  (+6 more)
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: boj-build.yml  casket-pages.yml  ci-cd.yml  codeql.yml  comprehensive-quality.yml  dependabot-automerge.yml  dogfood-gate.yml  governance.yml  hypatia-scan.yml  instant-sync.yml  jekyll-gh-pages.yml  mirror.yml  quality.yml  rsr-antipattern.yml  scorecard.yml  (+3 more)
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
docker/: Containerfile  Containerfile.dev  compose.yaml  eclexiaiser.toml
docs/: CITATIONS.adoc  tech-debt-2026-05-26.md
hooks/: commit-msg  post-merge  pre-commit  pre-push
scripts/: install-hooks.sh
src/rust/: Cargo.toml
src/rust/benches/: pathfinding.rs  robot_bench.rs  slam.rs
src/rust/src/: environment.rs  lib.rs  main.rs  pathfinding.rs  robot.rs  simulator.rs  slam.rs  types.rs
src/rust/tests/: aspect_test.rs  e2e_test.rs  property_test.rs
(+41 files in other folders)
