[package]
name = "robot-vacuum-cleaner"
version = "1.0.0"
edition = "2021"
authors = ["Robot Vacuum Team"]
description = "High-performance robot vacuum cleaner simulator in Rust"
license = "MIT"
repository = "https://github.com/Hyperpolymath/robot-vacuum-cleaner"
keywords = ["robotics", "vacuum", "simulator", "pathfinding", "slam"]
categories = ["simulation", "robotics"]

[dependencies]
# Numerical computing
ndarray = "0.15"
nalgebra = "0.32"
num-traits = "0.2"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (optional, for future extensions)
tokio = { version = "1.34", features = ["full"], optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Performance monitoring
criterion = { version = "0.5", optional = true }

# Parallel computing
rayon = "1.8"

# GraphQL server (optional)
async-graphql = { version = "6.0", optional = true }
async-graphql-axum = { version = "6.0", optional = true }
axum = { version = "0.7", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
rstest = "0.18"
mockall = "0.12"

[features]
default = []
async = ["tokio"]
graphql = ["async-graphql", "async-graphql-axum", "axum", "tokio"]
benchmarks = ["criterion"]

[[bin]]
name = "robot-vacuum"
path = "src/main.rs"

[[bench]]
name = "pathfinding"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "slam"
harness = false
required-features = ["benchmarks"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
